; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lock.c_lock_twophase_postcommit.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lock.c_lock_twophase_postcommit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@LockMethods = common dso_local global i32* null, align 8
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"unrecognized lock method: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lock_twophase_postcommit(i32 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = bitcast i8* %14 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** %9, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32* @TwoPhaseGetDummyProc(i32 %16, i32 1)
  store i32* %17, i32** %10, align 8
  %18 = load i32, i32* %8, align 4
  %19 = sext i32 %18 to i64
  %20 = icmp eq i64 %19, 16
  %21 = zext i1 %20 to i32
  %22 = call i32 @Assert(i32 %21)
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  store %struct.TYPE_5__* %24, %struct.TYPE_5__** %11, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = icmp ule i64 %28, 0
  br i1 %29, label %35, label %30

30:                                               ; preds = %4
  %31 = load i64, i64* %12, align 8
  %32 = load i32*, i32** @LockMethods, align 8
  %33 = call i64 @lengthof(i32* %32)
  %34 = icmp uge i64 %31, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %30, %4
  %36 = load i32, i32* @ERROR, align 4
  %37 = load i64, i64* %12, align 8
  %38 = call i32 @elog(i32 %36, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i64 %37)
  br label %39

39:                                               ; preds = %35, %30
  %40 = load i32*, i32** @LockMethods, align 8
  %41 = load i64, i64* %12, align 8
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  %43 = load i32, i32* %42, align 4
  store i32 %43, i32* %13, align 4
  %44 = load i32, i32* %13, align 4
  %45 = load i32*, i32** %10, align 8
  %46 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 8
  %50 = call i32 @LockRefindAndRelease(i32 %44, i32* %45, %struct.TYPE_5__* %46, i32 %49, i32 1)
  ret void
}

declare dso_local i32* @TwoPhaseGetDummyProc(i32, i32) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @lengthof(i32*) #1

declare dso_local i32 @elog(i32, i8*, i64) #1

declare dso_local i32 @LockRefindAndRelease(i32, i32*, %struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
